# Password-Manager

./: .gitignore  README.md  key.txt  key_creator.py  main.py  passwordManager.db  pw_db_manager.py  pw_manager.py  pyproject.toml  requirements.txt
src/: pw_db_manager.py
vault/: key_creator.py  main.py
