[project]
name = "the-vault"  # Required
description = "A password manager package"
version = "0.1.0"
requires-python = ">=3.7"
authors = [
    { name = "Joel Abraham", email = "joelabraham2341@gmail.com" }
]
dependencies = [ # Optional
    "cryptography",
]

[project.scripts]  # Optional
vault = "src.main:main"


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
